--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -282,6 +282,7 @@ CONFIG_MTK_TYPEC_WATER_DETECT=y
 CONFIG_MTK_TYPEC_WATER_DETECT_BY_PCB=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
+CONFIG_THUNDERCHARGE_CONTROL=y
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
