--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -65,9 +65,31 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PWRUTILX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTROUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTILX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PIXUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HELIX_SCHEDUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMURFUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESSSCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARDSCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ENERGY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKUTIL is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
+CONFIG_CPU_FREQ_GOV_ELECTROUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTILX=y
+CONFIG_CPU_FREQ_GOV_PIXUTIL=y
+CONFIG_CPU_FREQ_GOV_HELIX_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SMURFUTIL=y
+CONFIG_CPU_FREQ_GOV_DARKNESSSCHED=y
+CONFIG_CPU_FREQ_GOV_ALUCARDSCHED=y
+CONFIG_CPU_FREQ_GOV_ENERGY=y
+CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=58
 CONFIG_WAKE_BOOST_DURATION_MS=1000
