--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -76,6 +76,7 @@ CONFIG_CLS_U32_MARK=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_NFC=y
+CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
