--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -77,6 +77,24 @@ CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_NFC=y
 CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_DCTCP=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_NV=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
