--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -482,6 +482,11 @@ CONFIG_NANOHUB_MTK_IPI=y
 CONFIG_MAILBOX=y
 CONFIG_MTK_CMDQ_MBOX=y
 CONFIG_MTK_PMIC_WRAP=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=100
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4577
+CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=2929
 CONFIG_EXTCON_MTK_USB=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
