--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -68,6 +68,17 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=58
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_INPUT_BOOST_FREQ_LP=1275000
+CONFIG_INPUT_BOOST_FREQ_PERF=1308000
+CONFIG_MAX_BOOST_FREQ_LP=2000000
+CONFIG_MAX_BOOST_FREQ_PERF=2050000
+CONFIG_MIN_FREQ_LP=875000
+CONFIG_MIN_FREQ_PERF=919000
+CONFIG_IDLE_FREQ_LP=500000
+CONFIG_IDLE_FREQ_PERF=530000
 CONFIG_XFRM_MIGRATE=y
 CONFIG_SYN_COOKIES=y
 CONFIG_BRIDGE=y
