--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -507,6 +507,8 @@ CONFIG_BEGONIA_NFC=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_INCREMENTAL_FS=y
