--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -89,6 +89,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_SPSA2=y
+CONFIG_CPU_FREQ_GOV_SPSA2_SCHED=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 CONFIG_CPU_FREQ_GOV_ELECTROUTIL=y
