--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -94,13 +94,24 @@ config CPU_FREQ_DEFAULT_GOV_SPSA2
 	select CPU_FREQ_GOV_SPSA2
 	select CPU_FREQ_GOV_PERFORMANCE
 	help
-	  Use the CPUFreq governor 'spsa2_2' as default. This allows
+	  Use the CPUFreq governor 'spsa2' as default. This allows
 	  you to get a full dynamic frequency capable system by simply
 	  loading your cpufreq low-level hardware driver.
-	  Be aware that not all cpufreq drivers support the spsa2_2
+	  Be aware that not all cpufreq drivers support the spsa2
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_SPSA2_SCHED
+	bool "spsa2_sched"
+	select CPU_FREQ_GOV_SPSA2_SCHED
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'spsa2_sched' as default. This allows
+	  you to get a full dynamic frequency capable system by simply
+	  loading your cpufreq low-level hardware driver.
+	  Be aware that not all cpufreq drivers support the spsa2_sched
+	  governor. If unsure have a look at the help section of the
+	  driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	bool "conservative"
@@ -297,6 +308,24 @@ config CPU_FREQ_GOV_ONDEMAND
 
 config CPU_FREQ_GOV_SPSA2
 	tristate "'spsa2' cpufreq policy governor"
+	select CPU_FREQ_GOV_COMMON
+	help
+	  'spsa2' - This driver adds a dynamic cpufreq policy governor.
+	  The governor does a periodic polling and 
+	  changes frequency based on the CPU utilization.
+	  The support for this governor depends on CPU capability to
+	  do fast frequency switching (i.e, very low latency frequency
+	  transitions). 
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_spsa2.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SPSA2_SCHED
+	tristate "'spsa2_sched' cpufreq policy governor"
 	select CPU_FREQ_GOV_COMMON
 	help
 	  'spsa2' - This driver adds a dynamic cpufreq policy governor.
